<resources>
    <string name="app_name">找娱</string>

    <string name="index_bottom_bar_home">首页</string>
    <string name="index_bottom_bar_dynamic_state">职位</string>
    <string name="index_bottom_bar_integral">娱塘</string>
    <string name="index_bottom_bar_me">我的</string>

    <string name="my_homepage">我的个人主页</string>
    <string name="position_name">职位名称</string>
    <string name="name_pwd">账号密码登录</string>
    <string name="enter_name">请输入手机号</string>
    <string name="enter_pwd">请输入密码</string>
    <string name="code_login">验证码登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login">登录/注册</string>
    <string name="third_login">第三方登录</string>
    <string name="no_account">没有账号？</string>
    <string name="to_register">立即注册</string>
    <string name="register">新用户注册</string>
    <string name="get_code">获取验证码</string>
    <string name="enter_code">请输入验证码</string>
    <string name="reset_pwd">设置新密码</string>
    <string name="enter_new_pwd">请输入新密码</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>
    <string name="delete">删除本条</string>
    <string name="enter_position">请输入职位或名称</string>
    <string name="history">历史搜索</string>
    <string name="switch_city">选择城市</string>
    <string name="experience">经验</string>
    <string name="salary">薪资</string>
    <string name="reset">重置</string>
    <string name="ensure">确定</string>
    <string name="contact">联系人</string>
    <string name="message">消息</string>
    <string name="snapshot">随拍</string>
    <string name="state">求职状态</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_city_switch">CitySwitchActivity</string>
</resources>
