<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F5FA"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_18"
        android:layout_marginTop="@dimen/margin_22"
        android:text="@string/experience"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_18"
        android:layout_marginRight="@dimen/margin_18"
        android:layout_marginTop="@dimen/margin_21"
        app:layout_constraintTop_toBottomOf="@+id/tv_experience"/>
    <TextView
        android:id="@+id/tv_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salary"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="@dimen/margin_22"
        app:layout_constraintStart_toStartOf="@+id/tv_experience"
        app:layout_constraintTop_toBottomOf="@+id/rv_experience"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_18"
        android:layout_marginRight="@dimen/margin_18"
        android:layout_marginTop="@dimen/margin_21"
        app:layout_constraintTop_toBottomOf="@+id/tv_salary"/>
    <View
        android:id="@+id/view_divide"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#aaa"
        android:layout_marginTop="@dimen/margin_22"
        app:layout_constraintTop_toBottomOf="@+id/rv_salary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_40"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/view_divide">
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_16"
            android:textColor="#ff000000"
            android:background="@null"
            android:text="@string/reset"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#aaa"/>
        <Button
            android:id="@+id/btn_ensure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_16"
            android:textColor="#ff000000"
            android:background="@null"
            android:text="@string/ensure"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>