<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.example.zhaoyu.viewmodel.LoginVM" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fl_root"
        android:background="@drawable/action_bar_color"
        tools:context=".view.fragment.LoginFragment">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/margin_10"
            android:layout_height="21dp"
            android:src="@mipmap/back_login"
            android:layout_marginLeft="@dimen/margin_36"
            android:layout_marginTop="@dimen/margin_36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_83"
            android:text="@{vm.isCodeLogin ? @string/code_login : @string/name_pwd }"
            android:textSize="@dimen/text_size_24"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@+id/iv_back"
            app:layout_constraintTop_toBottomOf="@+id/iv_back"/>
        <TextView
            android:visibility="@{vm.isShowTips ? View.VISIBLE : View.INVISIBLE}"
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@={vm.tips}"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@+id/iv_back"
            app:layout_constraintTop_toBottomOf="@+id/tv_pwd"/>

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="@dimen/margin_45"
            android:layout_height="@dimen/margin_45"
            android:layout_marginTop="@dimen/margin_10"
            android:src="@mipmap/ic_phone"
            app:layout_constraintStart_toStartOf="@+id/iv_back"
            app:layout_constraintTop_toBottomOf="@+id/tv_tips"/>
        <View
            android:id="@+id/view_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45"
            android:layout_marginLeft="@dimen/margin_87"
            android:layout_marginRight="@dimen/margin_38"
            android:background="@mipmap/ic_name_pwd_bg"
            app:layout_constraintStart_toEndOf="@+id/iv_phone"
            app:layout_constraintBottom_toBottomOf="@+id/iv_phone"
            app:layout_constraintTop_toTopOf="@+id/iv_phone"/>
        <EditText
            android:text="@={vm.userName}"
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40"
            android:hint="@string/enter_name"
            android:maxLength="11"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/text_size_13"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/view_name"
            app:layout_constraintStart_toStartOf="@+id/view_name"
            app:layout_constraintTop_toTopOf="@+id/view_name" />

        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="@dimen/margin_45"
            android:layout_height="@dimen/margin_45"
            android:layout_marginTop="@dimen/margin_40"
            android:src="@mipmap/ic_pwd"
            app:layout_constraintStart_toStartOf="@+id/iv_phone"
            app:layout_constraintTop_toBottomOf="@+id/iv_phone"/>
        <View
            android:id="@+id/view_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45"
            android:layout_marginLeft="@dimen/margin_87"
            android:layout_marginRight="@dimen/margin_38"
            android:background="@mipmap/ic_name_pwd_bg"
            app:layout_constraintStart_toEndOf="@+id/iv_pwd"
            app:layout_constraintBottom_toBottomOf="@+id/iv_pwd"
            app:layout_constraintTop_toTopOf="@+id/iv_pwd"/>
        <EditText
            android:text="@={vm.userPwd}"
            android:id="@+id/et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40"
            android:hint="@{vm.isCodeLogin ? @string/enter_code : @string/enter_pwd}"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/text_size_13"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/view_pwd"
            app:layout_constraintStart_toStartOf="@+id/view_pwd"
            app:layout_constraintTop_toTopOf="@+id/view_pwd" />
        <Button
            android:visibility="@{vm.isCodeLogin ? View.VISIBLE : View.INVISIBLE }"
            android:layout_width="@dimen/margin_80"
            android:layout_height="@dimen/margin_34"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_margin="@dimen/margin_5"
            android:background="@drawable/shape_button"
            android:text="@string/get_code"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_10"
            app:layout_constraintBottom_toBottomOf="@+id/view_pwd"
            app:layout_constraintRight_toRightOf="@+id/view_pwd"
            app:layout_constraintTop_toTopOf="@+id/view_pwd" />

        <Button
            android:id="@+id/btn_code_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_18"
            android:background="@null"
            android:text="@{vm.isCodeLogin ? @string/name_pwd : @string/code_login }"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintStart_toStartOf="@+id/iv_back"
            app:layout_constraintTop_toBottomOf="@+id/iv_pwd"/>
        <Button
            android:onClick="@{()->vm.toResetPwdPage()}"
            android:id="@+id/btn_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_38"
            android:background="@null"
            android:text="@string/forget_pwd"
            android:textColor="@color/color_forget_pwd"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_code_login"
            app:layout_constraintTop_toTopOf="@+id/btn_code_login"/>
        <Button
            android:onClick="@{()->vm.login()}"
            android:id="@+id/btn_login"
            android:layout_width="305dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_42"
            android:background="@drawable/shape_button"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_17"
            app:layout_constraintEnd_toEndOf="@+id/btn_forget_pwd"
            app:layout_constraintStart_toStartOf="@+id/btn_code_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_code_login" />

        <LinearLayout
            android:id="@+id/ll_third_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login">
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_36"
                android:background="@color/colorWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_login"
                android:layout_margin="@dimen/margin_10"
                android:textColor="@color/colorWhite"/>
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/margin_36"
                android:background="@color/colorWhite"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/ib_qq_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_70"
            android:layout_marginRight="@dimen/margin_50"
            android:src="@mipmap/ic_qq"
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@+id/ll_third_login"
            app:layout_constraintRight_toLeftOf="@+id/gl"/>
        <ImageButton
            android:id="@+id/ib_wechat_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_50"
            android:src="@mipmap/ic_weixin"
            android:background="@null"
            app:layout_constraintLeft_toRightOf="@+id/gl"
            app:layout_constraintTop_toTopOf="@+id/ib_qq_login"
            app:layout_constraintBottom_toBottomOf="@id/ib_qq_login"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:textColor="@color/colorWhite"
            android:text="@string/no_account"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintTop_toBottomOf="@+id/ib_qq_login"
            app:layout_constraintRight_toLeftOf="@+id/gl"/>
        <Button
            android:visibility="gone"
            android:id="@+id/btn_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/to_register"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold"
            android:background="@null"
            app:layout_constraintLeft_toRightOf="@+id/tv_register"
            app:layout_constraintTop_toTopOf="@+id/tv_register"
            app:layout_constraintBottom_toBottomOf="@+id/tv_register"/>

        <android.support.constraint.Guideline
            android:id="@+id/gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </android.support.constraint.ConstraintLayout>
</layout>
