<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.example.zhaoyu.viewmodel.SearchVM" />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/margin_30"
        tools:context=".view.activity.SearchActivity">
        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_5"
            android:text="杭州"
            android:drawableRight="@mipmap/ic_down"
            android:paddingLeft="@dimen/margin_5"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/shape_search_button"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/et_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_position"
            android:layout_marginLeft="@dimen/margin_15"
            android:background="@null"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintLeft_toRightOf="@+id/tv_city"
            app:layout_constraintTop_toTopOf="@+id/tv_city"
            app:layout_constraintBottom_toBottomOf="@+id/tv_city"/>
        <Button
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginRight="@dimen/margin_10"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_city"
            app:layout_constraintBottom_toBottomOf="@+id/tv_city"/>
        <RelativeLayout
            android:id="@+id/rl_history"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintTop_toBottomOf="@+id/tv_city">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size_18"
                android:text="@string/history"/>
            <ImageButton
                android:id="@+id/ib_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_clear"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintTop_toBottomOf="@+id/rl_history"/>
        <android.support.design.widget.TabLayout
            android:visibility="gone"
            android:id="@+id/tab_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorFullWidth="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_city">
            <android.support.design.widget.TabItem
                android:id="@+id/tabItem_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="相关职位"/>
            <android.support.design.widget.TabItem
                android:id="@+id/tabItem_subway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="相关公司"/>
        </android.support.design.widget.TabLayout>
        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintTop_toBottomOf="@+id/tab_type"/>
    </android.support.constraint.ConstraintLayout>
</layout>
